todoAppBE/openshift/3_service.yaml
  apiVersion: v1
  kind: Service
  metadata:
    name: todoappbe
    labels:
      app: todoapp-api
      deploymentconfig: todoapp-api
  spec:
    ports:
    - name: 8090-tcp
      port: 8090
      protocol: TCP
      targetPort: 8090
    selector:
      app: todoapp-api
      deploymentconfig: todoapp-api
    type: ClusterIP
