todoAppBE/openshift/4_route.yaml
  apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    labels:
      app: todoapp-api
      deploymentconfig: todoapp-api
    name: todoapp-api
  spec:
    path: /
    port:
      targetPort: "8090"
    to:
      kind: Service
      name: todoappbe
